2015-01-28 Andre Heinecke <aheinecke@intevation.de>

	Add WMI command line tool.

	* wmi/wmic.c: New. From wmi-1.3.14.
	* wmi/CMakeLists.txt: Build and install wmic.

2015-01-28 Andre Heinecke <aheinecke@intevation.de>

	Add support for additional rpc interfaces.

	* samba/lib/compression/mszip.c: New. From wmi-1.3.14.
	* samba/CMakeLists.txt: Extend generated idl
	tables. Add additional files.
	* samba/librpc/rpc/table.c (idl_iface_by_name),
	(idl_iface_by_uuid): Add warning if lookup fails.

2015-01-26 Andre Heinecke <aheinecke@intevation.de>

	* winexe/winexe.c (main), winexe/wincmd.c (wincmd):
	Disable ntlmv2 if requested.
	* samba/param/loadparm.c (init_globals): Make ntlmv2
	client auth default.

2015-01-26 Andre Heinecke <aheinecke@intevation.de>

	* winexe/winexe.c (parse_args),
	winexe/wincmd.c (parse_args): Add ntlmv1 option.
	* winexe/wincmd.c (wincmd),
	winexe/winexe.c (main): Enable ntlmv2 authentication
	by default.

2015-01-26 Andre Heinecke <aheinecke@intevation.de>

	* winexe/winexesvc_exe.c: Removed. This file is generated.

2015-01-23 Andre Heinecke <aheinecke@intevation.de>

	* samba/CMakeLists.txt: Clear up comments.
	* wmi/CMakeLists.txt: Remove obsolete include dirs.
	* winexe/CMakeLists.txt: Find gnutls dynamically.

2015-01-22 Andre Heinecke <aheinecke@intevation.de>

	* samba/CMakeLists.txt: Configure dynconfig.c.in
	* samba/dynconfig.c: Renable to dynconfig.c.in

2015-01-22 Andre Heinecke <aheinecke@intevation.de>

	* winexe/wincmd.c(on_io_pipe_read, on_err_pipe_read): Limit
	output length to avoid overflow in result buffer.

2015-01-22 Andre Heinecke <aheinecke@intevation.de>

	* cmake/FindGSSAPI.cmake: Remove MIT detection.
	Enable multidev detection.
	* INSTALL: Mention the multidev alternative.

2015-01-21 Andre Heinecke <aheinecke@intevation.de>

	* winexe/wincmd.c (smb_close): Remove and replace
	by direct usage of talloc_free.

2015-01-21 Andre Heinecke <aheinecke@intevation.de>
