@@ -1,3 +1,11 @@
+2015-01-29 Andre Heinecke <aheinecke@intevation.de>
+
+	Remove duplicated rpc interface inclusion.
+
+	* samba/CMakeLists.txt (RPC_GEN_SRC): sort -u
+	* samba/CMakeLists.txt (RPC_GEN_HEADERS): Filter out
+	headers for sources with _c.c suffix.
+
 2015-01-28 Andre Heinecke <aheinecke@intevation.de>
 
 	Add WMI command line tool.
